# voicetrans

./: README.md  TREE
sphinx/: README.md  doc2hs.sh  sphinx.cabal
sphinx/app/: Main.hs
sphinx/src/: Sphinx.chs
voicetrans-frontend/: Dockerfile  LICENSE
voicetrans-frontend/web/: index.html  mic.js
voicetrans-server/: stack.yaml  voicetrans-server.cabal
voicetrans-server/app/: Main.hs
voicetrans-server/src/: Lib.hs  Refresh.hs  Translate.hs  Wave.hs
