name:                sphinx
version:             0.1.0.0
synopsis:            FFI wrapper for CMU PocketSphinx speech-to-text engine.
description:         Please see README.md
homepage:            https://github.com/TreeTide/voicetrans
license:             Apache2
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinp@treetide.com
copyright:           2020 Robin Palotai
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sphinx
  build-depends:       base >= 4.7 && < 5
                     , text
  build-tools:         c2hs
  -- include-dirs:        /home/ron/dev/voicetrans/sphinx/include /usr/local/include/pocketsphinx
  -- Note: ugly! manage these from nix?
  include-dirs:        /nix/store/rxldywdwy8a53yy9lwhrz8z7iqvh3lld-pocketsphinx-5prealpha/include/pocketsphinx /nix/store/k2vlc5dxkjc3rq8dxjvjb8gfjrfddjg5-sphinxbase-5prealpha/include/sphinxbase
  extra-libraries:     pocketsphinx,
                       sphinxbase
  default-language:    Haskell2010

executable sphinx-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sphinx
                     , bytestring
  default-language:    Haskell2010

test-suite sphinx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sphinx
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TreeTide/voicetrans
